# WiFiFP-Nav

./: .gitignore  CMakeLists.txt  README.md  scan.csv
include/: APData.hpp  APDataLoader.hpp  CSVLoader.hpp  Scan.hpp  WiFiLocalization.hpp  WiFiMeasurementFactor.hpp  WiFiScanData.hpp  WiFiScanDataLoader.hpp
include/map/: APPositionEstimator.hpp  Fingerprinting.hpp  Trajectory.hpp  Utils.hpp  WiFiData.hpp
lib/: wifi_scan.c
scripts/: ap_positions.csv  map.py  plot.py
src/: APData.cpp  APDataLoader.cpp  Scan.cpp  WiFiLocalization.cpp  WiFiMeasurementFactor.cpp  WiFiScanData.cpp  WiFiScanDataLoader.cpp  main.cpp
src/map/: APPositionEstimator.cpp  Fingerprinting.cpp  Trajectory.cpp  Utils.cpp  WiFiData.cpp  map.cpp
